--- a/src/pages/calendar/CalendarPage.module.scss
+++ b/src/pages/calendar/CalendarPage.module.scss
@@ -14,7 +14,7 @@
 
 .layout {
   display: grid;
-  grid-template-columns: 1fr 360px;
+  grid-template-columns: 1fr 420px;
   gap: $space-4;
   align-items: start;
 
